Make key groups usable

-Show group members as children of the group. Double clicking on them brings 
 you to the key.
-Show the number of keys in size column of the group

FEATURE:104820
BUG:143297

svn path=/trunk/KDE/kdeutils/kgpg/; revision=706061